# patricia

./: Makefile  README.md  dune-project  header.txt
src/: Patricia.ml  Patricia.mli  dune
test/: Makefile  dune  reference.ml  test.ml
