(lang dune 3.18)
(name patricia)
(generate_opam_files true)
(package
  (name patricia)
  (authors "François Pottier <francois.pottier@inria.fr>")
  (maintainers "François Pottier <francois.pottier@inria.fr>")
  (source (uri git+https://github.com/fpottier/patricia.git))
  (homepage https://github.com/fpottier/patricia/)
  (bug_reports https://github.com/fpottier/patricia/issues)
  (synopsis "XXX")
  (license "LGPL-2.0-only WITH OCaml-LGPL-linking-exception")
  (maintenance_intent "(latest)")
  (depends
    (ocaml (>= 4.14))
    (monolith :with-test)
    (ocamlfind :with-test)
  )
)
